src-tauri/tests/fixtures/complex_mixed.txt
# Generated by iptables-save v1.8.7 on Sat Mar 22 10:00:00 2026
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [10000:500000]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:f2b-sshd - [0:0]
:f2b-nginx-http-auth - [0:0]
:TR-CONNTRACK - [0:0]
:TR-INPUT - [0:0]
-A INPUT -j TR-CONNTRACK
-A INPUT -j TR-INPUT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A INPUT -p tcp -m multiport --dports 80,443 -j f2b-nginx-http-auth
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp --dport 22 -s 83.12.44.0/24 -m comment --comment "Allow office SSH" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp --dport 8080 -s 10.0.0.0/8 -m comment --comment "Internal API" -j ACCEPT
-A INPUT -p icmp -m limit --limit 10/sec --limit-burst 20 -j ACCEPT
-A INPUT -p udp --dport 51820 -m comment --comment "WireGuard VPN" -j ACCEPT
-A INPUT -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "TR-BLOCKED: "
-A INPUT -j DROP
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A f2b-sshd -s 198.51.100.10/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 203.0.113.99/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -j RETURN
-A f2b-nginx-http-auth -s 192.0.2.50/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-nginx-http-auth -j RETURN
-A TR-CONNTRACK -m conntrack --ctstate INVALID -j DROP
-A TR-CONNTRACK -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A TR-INPUT -p tcp -m multiport --dports 80,443 -m comment --comment "Web traffic" -j ACCEPT
-A TR-INPUT -p tcp --dport 22 -s 83.12.44.0/24 -m comment --comment "Office SSH" -j ACCEPT
COMMIT
*nat
:PREROUTING ACCEPT [200:10000]
:INPUT ACCEPT [100:5000]
:OUTPUT ACCEPT [150:7500]
:POSTROUTING ACCEPT [120:6000]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.17.0.2:80
COMMIT
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
