src-tauri/tests/fixtures/fail2ban_active.txt
# Generated by iptables-save v1.8.7 on Sat Mar 22 10:00:00 2026
*filter
:INPUT ACCEPT [2000:100000]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1800:90000]
:f2b-sshd - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT
-A f2b-sshd -s 192.168.1.100/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 10.0.0.50/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 203.0.113.42/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -j RETURN
COMMIT
